--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.0.1",
     "bootstrap": "^4.0.0-alpha.6"
   }
 }
