--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Multi Faith Room Booking System",
+  "name": "Room Booking System",
   "description": "Booking system for faith rooms.",
   "repository": "https://github.com/teamCAAP/Multi-Faith-Room-Booking-System",
   "logo": "https://pbs.twimg.com/profile_images/961758302261665798/BEDU-uIs_400x400.jpg",
