--- a/app.json
+++ b/app.json
@@ -14,5 +14,35 @@
   ],
   "scripts": {
     "postdeploy": "php artisan migrate"
+  },
+  "env": {
+    "APP_KEY": {
+      "description": "A secret key for verifying the integrity of signed cookies.",
+      "generator": "secret"
+    },
+    "DB_CONNECTION": {
+      "description": "PGSQL",
+      "value": ""
+    },
+    "DB_DATABASE": {
+      "description": "PGSQL",
+      "value": ""
+    },
+    "DB_HOST": {
+      "description": "PGSQL",
+      "value": ""
+    },
+    "DB_USERNAME": {
+      "description": "PGSQL",
+      "value": ""
+    },
+    "DB_PASSWORD": {
+      "description": "PGSQL",
+      "value": ""
+    },
+    "DB_PORT": {
+      "description": "PGSQL",
+      "value": "5432"
+    }
   }
 }
